; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_transaction.c_transaction_notify_view_ready_by_serial.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_transaction.c_transaction_notify_view_ready_by_serial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_view = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.sway_transaction_instruction* }
%struct.sway_transaction_instruction = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @transaction_notify_view_ready_by_serial(%struct.sway_view* %0, i64 %1) #0 {
  %3 = alloca %struct.sway_view*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.sway_transaction_instruction*, align 8
  store %struct.sway_view* %0, %struct.sway_view** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.sway_view*, %struct.sway_view** %3, align 8
  %7 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.sway_transaction_instruction*, %struct.sway_transaction_instruction** %10, align 8
  store %struct.sway_transaction_instruction* %11, %struct.sway_transaction_instruction** %5, align 8
  %12 = load %struct.sway_transaction_instruction*, %struct.sway_transaction_instruction** %5, align 8
  %13 = getelementptr inbounds %struct.sway_transaction_instruction, %struct.sway_transaction_instruction* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %4, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load %struct.sway_transaction_instruction*, %struct.sway_transaction_instruction** %5, align 8
  %19 = call i32 @set_instruction_ready(%struct.sway_transaction_instruction* %18)
  br label %20

20:                                               ; preds = %17, %2
  ret void
}

declare dso_local i32 @set_instruction_ready(%struct.sway_transaction_instruction*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
